--- a/startup-matchmaker/starter_code/css/styles.css
+++ b/startup-matchmaker/starter_code/css/styles.css
@@ -1,3 +1,6 @@
 /* ################################################## */
 /* ########### YOUR CUSTOM CSS ########### */
 /* ################################################## */
+
+/* BACKGROUND IMAGE URL */
+/* https://res.cloudinary.com/jkeohan/image/upload/v1607432403/coworking_nxwjrp.jpg */
